<resources>
    <string name="app_name">PenyakitAnjing</string>
    <string name="action_settings">Settings</string>
    <string name="Back">Clear</string>
    <string name="Next">Diagnosa</string>
    <string name="title_activity_prediksi_penyakit">Hasil Diagnosa</string>
    <string name="hasil">Hasil</string>
    <string name="persen">Persentase Penyakit</string>
    <string name="gmp">\nGambar Penyakit</string>
    <string name="pnykt">\nPrediksi Penyakit</string>
    <string name="pny">\nPenyebab</string>
    <string name="text_pny">" \n"</string>
    <string name="pmlh">\nPenyembuhan</string>
    <string name="text_pmlh">" \n\n"</string>
    <string name="restart">Kembali</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="title_activity_splash_screen">Aplikasi Dokter Jepun</string>
    <string name="title_activity_about_screen">Tentang Aplikasi</string>
    <string name="title_activity_main">Daftar Gejala Penyakit</string>
    <string name="about1">Aplikasi Android</string>
    <string name="about2" align="right">\nDeveloped By</string>
    <string name="about3">Gede Ngurah Yoga Pramana 1404505078\nPutu Septian Aryadana 1404505084\nPemrograman Mobile C\nDosen: I Putu Agus Eka, S.T.,M.T.\nTeknoogi Informasi\nUniversitas Udayana\n2016</string>
    <string name="about6">Teknologi Informasi</string>
    <string name="about7">Memilih Gejala Penyakit</string>

    <string name="p1">Penyakit Addison atau lebih dikenal dengan nama Addison’s Disease adalah suatu hipofungsi dari adrenal yang timbul secara spontan dan berangsur-angsur, dimana ketidakmemadaian adrenal, dapat menjadi penyakit yang mengancam jiwa.</string>
    <string name="p2">Canine distemper / Distemper anjing adalah virus yang menyerang saluran pernafasan, pencernaan, sistem syaraf pusat, serta selaput konjungtiva mata pada anjing. Penyakit ini memiliki tingkat kematian yang sangat tinggi pada anjing.Virus ini ditularkan dari satu anjing ke anjing lain melalui kontak langsung dengan urin segar, darah atau air liur. Selain itu, bersin, batuk dan berbagi mangkuk makanan dan air pada anjing termasuk cara yang mungkin bagi virus untuk ditularkan.</string>
    <string name="p3">Leptospirosis merupakan penyakit menular dan zoonosis (menular dari hewan ke manusia ataupun sebaliknya) yang menyebabkan kegagalan ginjal akut serta penyakit hati. Penyebab leptospirosis adalah berbagai serovar dari Leptospira interrogans. Leptospirosis dalam bentuk subakut tidak tampak gejala klinis sedangkan dalam bentuk akut akan menyebabkan sepsis, nefritis interstisialis (infeksi di ginjal), anemia hemolitika, hepatitis dan abortus. Anjing yang memiliki aktifitas di luar ruangan dan anjing pemburu lebih beresiko menderita leptospirosis. Faktor lingkungan yang mendukung kehidupan Leptospira sp yaitu lingkungan yang lembab dan hangat, musim penghujan, dataran rendah, daerah tropis dan subtropis, lingkungan yang berair. organisme dapat bertahan 180 hari di dalam air atau tanah yang basah, lingkungan yang padat populasi serta terdapat hewan pengerat atau satwa liar.</string>
    <string name="p4">Parvovirus (Muntaber) merupakan salah satu virus yang menyerang saluran pencernaan. Virus lainnya yang dapat menyerang pencernaan yaitu coronavirus, distemper virus, dan rotavirus. Penyakit ini sangat menular pada anjing terutama pada anak anjing dan anjing yang belum divaksinasi. Adapun ciri khas yang paling menonjol pada anjing yang terserang virus parvo yaitu muntah dan diare berdarah. Beberapa ras anjing seperti Rottweilers, Pit Bull, Doberman Pinschers, Labrador Retriever and German Shepherd lebih rentan terhadap penyakit ini.</string>
    <string name="p5">Demodectic Mange, kadang disebut dengan "Demodex" atau "Red Mange" adalah bentuk paling umum dari penyakit mange pada anjing. Demodex disebabkan oleh Demodex canis, yaitu parasit yang hidup di dalam folikel bulu anjing. Di bawah mikroskop, tungau ini berbentuk seperti cerutu dengan delapan kaki. Semua anjing normal (dan banyak manusia) memiliki sedikit tungau (mites) pada kulit mereka. Selama sistem kekebalan tubuh berfungsi dengan baik, tungau ini tidak menyebabkan bahaya.</string>
    <string name="p6">Atopic Dermatitis adalah penyakit kulit pada anjing dan kucing yang disebabkan karena alergi. Alergi bisa disebabkan oleh berbagai macam, mulai dari pakan, lingkungan, serbuk bunga, debu, dan lain–lain. Atopic dermatitis umumnya diderita oleh anjing yang mulai beranjak usia 1-3 tahun.</string>
    <string name="p7">Penyakit Scabies pada anjing, yang dikenal juga dengan Sarcoptic Mange atau Canine Scabies disebabkan oleh parasit yang disebut tungau sarcoptic (sarcoptic mites). Jenis tungau mikroskopis ini biasanya selalu menyerang area kulit pada anjing dewasa dan anak anjing sehat dan menimbulkan berbagai jenis masalah kulit. Jenis masalah yang paling umum terkait dengan parasit ini adalah bulu rontok dan gatal parah. </string>
    <string name="p8">Ringworm merupakan penyakit kulit  yang disebabkan oleh infeksi jamur. Biasanya daerah luka biasanya berada di sekitar lipatan leher, lipatan mata, lipatan paha, ekor dan daerah kuku. Daerah luka biasanya berbentuk seperti cincin melingkar. Penyakit ini bersifat zoonosis bisa menular ke manusia, disarankan apabila terjadi kontak antara manusia dengan anjing penderita segera cuci tangan pakai detergen.</string>
    <string name="p9">Eclampsia merupakan penyakit akut, yang disebabkan oleh rendahnya kadar kalsium dalam darah (hipokalsemia), sering terjadi pada anjing ras kecil dengan jumlah anak banyak, jarang pada kucing (Eldredge et al. 2007; Pathan et al. 2011).  Kejadian eclampsia juga dapat terjadi selama kebuntingan dan akan menyebabkan distokia (Eldredge et al. 2007). Dengan etiologi penyakit yang sama, jika pada anjing disebut eclampsia, pada sapi perah lebih lazim dikenal dengan milk fever, sedangkan pada domba disebut purpueral tetany.</string>
    <string name="p10">Rabies atau umumnya dikenal sebagai penyakit “anjing gila”, merupakan penyakit serius yang menyerang otak dan sistem saraf. Penyakit ini digolongkan sebagai penyakit mematikan yang harus ditangani dengan cepat.</string>
    <string name="p11">Urolithiasis adalah penyakit yang disebabkan oleh adanya batu (urolith) atau kristal-kristal pada saluran air kencing (tractus urinarius). Batu dan kristal tersebut dapat ditemukan di ginjal, urethra, dan kebanyakan di vesika urinaria (kandung kencing). Adanya batu atau kristal tersebut dapat membuat iritasi saluran air kencing, akibatnya saluran tersebut rusak, ditemukan darah bersama urin yang dapat menimbulkan rasa sakit. Banyak kasus yang ditemukan dalam praktek saya dimana batu dan kristal tersebut menyebabkan penyumbatan pada saluran air kencing sehingga terjadi retensi urin.</string>
    <string name="p12">Gastric Dilatation dan sindrom volvulus (GDV), lebih sering disebut sebagai kembung lambung adalah penyakit pada anjing dimana perut anjing kembung dan kemudian melilit. Ini menyebabkan keaadaan  darurat terjadi karena lambung yang melilit menyebabkan peningkatan tekanan pada lambung yang akibatnya  kerusakan pada sistem kardiovaskular dan penurunan perfusi. Perfusi adalah proses penyaluran nutrisi makanan ke jaringan tubuh.  Perfusi yang tidak cukup akan dapat menyebabkan kerusakan sel dan bahkan kematian organ.</string>
    <string name="p13">Pyometra adalah kondisi medis dimana pus (nanah) terakumulasi di badan uterus baik di anjing ataupun kucing. Kondisi ini terjadi setelah anjing ataupun kucing mengalami beberapa siklus estrus (menstruasi) dengan tidak diikuti kebuntingan. Abnormalitas hormon menyebabkan dinding uterus mengalami penebalan. Pada saat kondisi ini terjadi, cairan akan mulai mengisi dinding uterus yang mengalami penebalan, terjadi infeksi dan uterus akan terisi cairan berupa nanah karena pertahanan tubuh terhadap infeksi. Pada beberapa kondisi, cervix akan membuka dan akan menyebabkan nanah keluar melalui vagina dan menimbulkan bau yang tidak sedap, akan tetapi kondisi ini bukan merupakan kondisi yang terlalu mengancam jiwa hewan. Namun, jika kondisi cervix tertutup, maka pus (nanah) akan terjebak didalam uterus dan tidak dapat dikeluarkan dari dalam tubuh hewan. Pada kondisi ini, infeksi akan mengancam jiwa hewan jikatidak segera dilakukan operasi pengangkatan uterus (ovariohysterectomy).</string>
    <string name="p14">Hidung berdarah ( Kedokteran : epistaksis atau Inggris : epistaxis ) atau mimisan adalah satu keadaan pendarahan dari hidung yang keluar melalui lubang hidung. Dalam kasus tertentu, darah dapat berasal dari sinus. Selain itu pendarahan yang terjadi dapat masuk ke saluran pencernaan dan dapat mengakibatkan muntah. Mimisan, baik yang bersifat menetes ( epistaxis ) maupun mengalir ( rhinorhagia ), secara harafiah berarti pendarahan hidung. Dalam pengertian sehari-hari semua perdarahan yang melalui rongga hidung, tanpa memandang asalnya, disebut mimisan.</string>
    <string name="p15">Ada beberapa jenis tungau yang bisa hidup dalam telinga anjing, tetapi yang paling umum adalah otodectes cynotis/Otodectic Mite, yaitu parasit berukuran kecil berkaki delapan yang memakan lilin dan minyak di dalam saluran telinga anjing (sering juga orang menyebutnya dengan kutu telinga, meskipun sebenarnya kutu dan tungau itu adalah jenis yang berbeda). Seekor tungau memiliki siklus hidup selama 3 minggu, dan bisa dilihat dengan kasat mata. Tungau-tungau ini bisa menyebabkan iritasi dan peradangan, bisa menginfeksi saluran telinga bagian luar dan dalam, dan juga bisa menimbulkan infeksi kulit atau infeksi telinga yang lebih serius jika tidak diobati. Saat terjadi infeksi biasanya menghasilkan kotoran hitam yang khas, dan dalam beberapa kasus, saluran telinga bisa menjadi seluruhnya tersumbat oleh kotoran-kotoran hitam yang mirip seperti bubuk kopi ini.</string>
    <string name="p16">Penyakit diabetes mellitus disebabkan oleh :\n
•	Pengaruh genetik (anjing yang memiliki faktor resiko yang sangat tinggi terserang diabetes mellitus adalah ras beagle, poodle, samoyed, dachshund, miniature schnauzer, cairn terrier, keeshond dan puli)
\n•	Pola pakan yang terlalu banyak kandungan karbohidrat dan gula
\n•	Penyakit lain yang disebabkan oleh virus
\n•	Komplikasi penyakit organ dalam (ginjal, jantung, dll)
\n•	Pemberian obat yang tidak sesuai dosisnya
\n•	Faktor usia (anjing yang usianya tua lebih rentan terserang diabetes mellitus daripada yang usianya muda)
</string>
</resources>
