<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.adityaputra.newpenyakitanjing.About">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:src="@drawable/anjing1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:text="@string/about2"
        android:textAlignment="center"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:text="@string/about3"
        android:textAlignment="center"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="kembali"
        android:text="@string/restart"
        android:layout_below="@id/textView2"/>
</RelativeLayout>
