<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.adityaputra.newpenyakitanjing.MainActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/about7" />

            <CheckBox
                android:id="@+id/c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Muntah - muntah"/>

            <CheckBox
                android:id="@+id/c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Diare"/>

            <CheckBox
                android:id="@+id/c3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Dehidrasi"/>

            <CheckBox
                android:id="@+id/c4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Lumpuh/tidak mampu berdiri"/>

            <CheckBox
                android:id="@+id/c5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Kolaps/pingsan"/>

            <CheckBox
                android:id="@+id/c6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Detak jantung lambat (kurang dari 60 denyut per menit)"/>

            <CheckBox
                android:id="@+id/c7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Demam"/>

            <CheckBox
                android:id="@+id/c8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Sesak nafas"/>

            <CheckBox
                android:id="@+id/c9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Batuk-batuk"/>

            <CheckBox
                android:id="@+id/c10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Keluar cairan hidung"/>

            <CheckBox
                android:id="@+id/c11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Kejang"/>

            <CheckBox
                android:id="@+id/c12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Sakit kuning (putih mata berwarna kekuningan)"/>

            <CheckBox
                android:id="@+id/c13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Tidak nafsu makan"/>

            <CheckBox
                android:id="@+id/c14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Diare berdarah"/>

            <CheckBox
                android:id="@+id/c15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Lemas"/>

            <CheckBox
                android:id="@+id/c16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Gatal"/>

            <CheckBox
                android:id="@+id/c17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Bulu rontok"/>

            <CheckBox
                android:id="@+id/c18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Kulit meradang dan memerah"/>

            <CheckBox
                android:id="@+id/c19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Penebalan kulit"/>

            <CheckBox
                android:id="@+id/c20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Bintik-bintik merah pada kulit"/>

            <CheckBox
                android:id="@+id/c21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Timbul kerak pada daerah kepala"/>

            <CheckBox
                android:id="@+id/c22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Timbul kerontokan berbentuk lingkaran"/>

            <CheckBox
                android:id="@+id/c23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Menggigil"/>

            <CheckBox
                android:id="@+id/c24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Bernafas cepat"/>

            <CheckBox
                android:id="@+id/c25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Air liur tak terkendali"/>

            <CheckBox
                android:id="@+id/c26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Menggigit apa aja"/>

            <CheckBox
                android:id="@+id/c27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Sering buang air kecil dengan jumlah sedikit"/>

            <CheckBox
                android:id="@+id/c28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Air kencing mengandung darah"/>

            <CheckBox
                android:id="@+id/c29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Perut kembung"/>

            <CheckBox
                android:id="@+id/c30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Muntah produktif (tampak muntah tetapi tidak mengeluarkan)"/>

            <CheckBox
                android:id="@+id/c31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Keluar cairan nanah dari vagina"/>

            <CheckBox
                android:id="@+id/c32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Darah keluar dari hidung"/>

            <CheckBox
                android:id="@+id/c33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Gatal di daerah telinga"/>

            <CheckBox
                android:id="@+id/c34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Kotoran telinga berwarna kecoklatan"/>

            <CheckBox
                android:id="@+id/c35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Sering buang air kecil"/>

            <CheckBox
                android:id="@+id/c36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Nafsu makan meningkat"/>

            <CheckBox
                android:id="@+id/c37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="chkhandler"
                android:text="Penurunan berat badan"/>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnProsesNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="resetEvent"
                    android:text="@string/Back" />

                <Button
                    android:id="@+id/btnProsesNext1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="hitung"
                    android:text="@string/Next" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
